--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "vector": "cpp",
         "optional": "cpp",
         "variant": "cpp",
-        "expected": "cpp"
+        "expected": "cpp",
+        "numbers": "cpp",
+        "random": "cpp"
     }
 }
